--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img class="full-width-img" src="media/police_report.png" alt="BigBen02" />
       </div>
       <div class="img-wrapper">
-        <img class="full-width-img" src="media/bigben02.png" alt="BigBen02" />
+        <img class="full-width-img" src="media/bigben02.jpg" alt="BigBen02" />
       </div>
 
       <!-- <div class="img-wrapper">
@@ -88,7 +88,7 @@
         <img class="centered-full" src="media/our_stop3.png" alt="BusStop1" />
       </div>
 
-              <img class="full-width-img" src="media/our_stop2.png" alt="BusStop1" />
+              <img class="full-width-img" src="media/our_stop.jpg" alt="BusStop1" />
       </div>
 
       <!-- <div class="img-wrapper">
@@ -107,7 +107,7 @@
       <div class="img-wrapper">
         <img
           class="full-width-img"
-          src="media/fairy_wheel.png"
+          src="media/fairy_wheel.jpg"
           alt="BusStop3"
         />
       </div>
