--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <img class="centered-full" src="media/00-17.png" alt="BigBen02" />
       </div> -->
       <div class="img-wrapper">
-        <img class="full-width-img" src="media/BusRed2.png" alt="BigBen02" />
+        <img class="full-width-img" src="media/bus_red.png" alt="BigBen02" />
       </div>
       <div class="img-wrapper">
         <img class="full-width-img" src="media/BusBlur.jpg" alt="BigBen02" />
@@ -47,10 +47,10 @@
         <img class="full-width-img" src="media/tickett.png" alt="BigBen02" />
       </div>
       <div class="img-wrapper">
-        <img class="full-width-img" src="media/bus_traffic.png" alt="BigBen02" />
+        <img class="full-width-img" src="media/bus_traffic.jpg" alt="BigBen02" />
       </div>
       <div class="img-wrapper">
-        <img class="centered-full" src="media/luton.png" alt="BigBen02" />
+        <img class="centered-full" src="media/luton.jpg" alt="BigBen02" />
       </div>
 
       <!-- <div class="img-wrapper">
@@ -58,7 +58,7 @@
       </div> -->
 
       <div class="img-wrapper">
-        <img class="full-width-img" src="media/FlixBus.jpg" alt="BigBen02" />
+        <img class="full-width-img" src="media/luton_bus.jpg" alt="BigBen02" />
       </div>
       
             <div class="timestamp" data-time="01:48"></div>
@@ -66,11 +66,11 @@
         <img class="full-width-img" src="media/ryan.png" alt="BigBen02" />
       </div>
       <div class="img-wrapper">
-        <img class="full-width-img" src="media/BusBlue.jpg" alt="BigBen02" />
+        <img class="full-width-img" src="media/bus_blue.jpg" alt="BigBen02" />
       </div>
 
       <div class="img-wrapper">
-        <img class="centered-full" src="media/BusTime.jpg" alt="BusTime" />
+        <img class="centered-full" src="media/bus_time.jpg" alt="BusTime" />
       </div>
 
       <div class="img-wrapper">
@@ -85,7 +85,7 @@
         <img class="centered-full" src="media/02-58.png" alt="BigBen02" />
       </div> -->
       <div class="img-wrapper">
-        <img class="centered-full" src="media/our_stop3.png" alt="BusStop1" />
+        <img class="centered-full" src="media/our_stop3.jpg" alt="BusStop1" />
       </div>
 
               <img class="full-width-img" src="media/our_stop.jpg" alt="BusStop1" />
@@ -111,21 +111,21 @@
           alt="BusStop3"
         />
       </div>
-      <div class="img-wrapper">
+      <!-- <div class="img-wrapper">
         <img class="full-width-img" src="media/streets.png" alt="Streets" />
+      </div> -->
+      <div class="img-wrapper">
+        <img class="full-width-img" src="media/legs.jpg" alt="Legs" />
       </div>
       <div class="img-wrapper">
-        <img class="full-width-img" src="media/legs2.png" alt="Legs" />
-      </div>
-      <div class="img-wrapper">
-        <img class="full-width-img" src="media/Fox.jpg" alt="Fox" />
+        <img class="full-width-img" src="media/foxes.jpg" alt="Fox" />
       </div>
       <!-- <div class="img-wrapper">
         <img class="centered-full" src="media/03-58.png" alt="Fox" />
       </div> -->
       <div class="timestamp" data-time="04:03"></div>
       <div class="img-wrapper">
-        <img class="full-width-img" src="media/outro.png" alt="Outro" />
+        <img class="full-width-img" src="media/outro.jpg" alt="Outro" />
       </div>
                         <div class="img-wrapper">
         <img class="centered-full" src="media/cinestill.png" alt="BigBen02" />
