--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <img class="full-width-img" src="media/ryan.png" alt="BigBen02" />
       </div>
       <div class="img-wrapper">
-        <img class="full-width-img" src="media/bus_blue.jpg" alt="BigBen02" />
+        <img class="full-width-img" src="media/BusBlue.jpg" alt="BigBen02" />
       </div>
 
       <div class="img-wrapper">
