--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div> -->
 
       <div class="img-wrapper">
-        <img class="full-width-img" src="media/police_report.png" alt="BigBen02" />
+        <img class="centered-full" src="media/police_report.png" alt="BigBen02" />
       </div>
       <div class="img-wrapper">
         <img class="full-width-img" src="media/bigben02.jpg" alt="BigBen02" />
@@ -47,7 +47,7 @@
         <img class="full-width-img" src="media/tickett.png" alt="BigBen02" />
       </div>
       <div class="img-wrapper">
-        <img class="full-width-img" src="media/bus_traffic.jpg" alt="BigBen02" />
+        <img class="full-width-img" src="media/bustraffic.jpg" alt="BigBen02" />
       </div>
       <div class="img-wrapper">
         <img class="centered-full" src="media/luton.jpg" alt="BigBen02" />
@@ -88,7 +88,7 @@
         <img class="centered-full" src="media/our_stop3.jpg" alt="BusStop1" />
       </div>
 
-              <img class="full-width-img" src="media/our_stop.jpg" alt="BusStop1" />
+              <img class="full-width-img" src="media/ourstop2.jpg" alt="BusStop1" />
       </div>
 
       <!-- <div class="img-wrapper">
@@ -115,7 +115,7 @@
         <img class="full-width-img" src="media/streets.png" alt="Streets" />
       </div> -->
       <div class="img-wrapper">
-        <img class="full-width-img" src="media/legs.jpg" alt="Legs" />
+        <img class="centered-full" src="media/legs.jpg" alt="Legs" />
       </div>
       <div class="img-wrapper">
         <img class="full-width-img" src="media/foxes.jpg" alt="Fox" />
@@ -125,7 +125,7 @@
       </div> -->
       <div class="timestamp" data-time="04:03"></div>
       <div class="img-wrapper">
-        <img class="full-width-img" src="media/outro.jpg" alt="Outro" />
+        <img class="centered-full" src="media/outro.jpg" alt="Outro" />
       </div>
                         <div class="img-wrapper">
         <img class="centered-full" src="media/cinestill.png" alt="BigBen02" />
