--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <img class="full-width-img" src="media/tickett.png" alt="BigBen02" />
       </div>
       <div class="img-wrapper">
-        <img class="full-width-img" src="media/bus_traffic.jpg" alt="BigBen02" />
+        <img class="full-width-img" src="media/BusTraffic.jpg" alt="BigBen02" />
       </div>
       <div class="img-wrapper">
         <img class="centered-full" src="media/luton.jpg" alt="BigBen02" />
