--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>boy who lost his phone</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/png" href="media/find-my.png" />
     <script src="script.js" defer></script>
   </head>
   <body>
@@ -29,7 +30,7 @@
 
 
                   <div class="img-wrapper">
-        <img class="centered-full" src="media/food_order.png" alt="BigBen02" />
+        <img class="full-width-img" src="media/food_order.png" alt="BigBen02" />
       </div>
 
             <div class="timestamp" data-time="00:18"></div>
