mobile change back

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- <img class="centered-full" src="media/intro.png" alt="intro" /> -->
     <canvas id="noiseCanvas"></canvas>
     <section class="dark-bg">
-      <div class="timestamp" data-time="the boy who lost his phone"></div>
+      <div class="timestamp" data-time="boy who lost his phone"></div>
       <!-- <div class="img-wrapper">
         <img class="centered-full" src="media/01.jpg" alt="BigBen02" />
       </div> -->
