--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
         <img class="full-width-img" src="media/luton_bus.jpg" alt="BigBen02" />
       </div>
       
-            <div class="timestamp" data-time="01:48"></div>
+            <div class="timestamp" data-time="01:23"></div>
       <div class="img-wrapper">
-        <img class="full-width-img" src="media/ryan.png" alt="BigBen02" />
+        <img class="full-width-img" src="media/ryan3.png" alt="BigBen02" />
       </div>
       <div class="img-wrapper">
         <img class="full-width-img" src="media/BusBlue.jpg" alt="BigBen02" />
@@ -75,11 +75,14 @@
       </div>
 
       <div class="img-wrapper">
-        <img class="centered-full" src="media/selfie.png" alt="BusTime" />
+        <img class="centered-full" src="media/selfie2.png" alt="BusTime" />
       </div>
 
       <div class="img-wrapper">
         <img class="full-width-img" src="media/time.png" alt="Time" />
+      </div>
+           <div class="img-wrapper">
+        <img class="centered-full" src="media/message.png" alt="BusTime" />
       </div>
       <div class="timestamp" data-time="02:58"></div>
       <!-- <div class="img-wrapper">
@@ -112,9 +115,12 @@
           alt="BusStop3"
         />
       </div>
-      <!-- <div class="img-wrapper">
-        <img class="full-width-img" src="media/streets.png" alt="Streets" />
-      </div> -->
+            <div class="img-wrapper">
+        <img class="full-width-img" src="media/streets2.png" alt="Streets" />
+      </div>
+      <div class="img-wrapper">
+        <img class="full-width-img" src="media/streets1.png" alt="Streets" />
+      </div>
       <div class="img-wrapper">
         <img class="centered-full" src="media/legs.jpg" alt="Legs" />
       </div>
