--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>last seen at 22:39</title>
+    <title>last seen 22:39</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/png" href="media/find-my.png" />
     <script src="script.js" defer></script>
@@ -12,7 +12,7 @@
     <!-- <img class="centered-full" src="media/intro.png" alt="intro" /> -->
     <canvas id="noiseCanvas"></canvas>
     <section class="dark-bg">
-      <div class="timestamp" data-time="last seen at 22:39"></div>
+      <div class="timestamp" data-time="last seen 22:39"></div>
       <!-- <div class="img-wrapper">
         <img class="centered-full" src="media/01.jpg" alt="BigBen02" />
       </div> -->
