--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
       <div class="img-wrapper">
         <img class="full-width-img" src="media/time.png" alt="Time" />
       </div>
+
+      <div class="img-wrapper">
+        <img class="full-width-img" src="media/selfie_new.png" alt="Time" />
+      </div>
+
            <div class="img-wrapper">
         <img class="centered-full" src="media/message.png" alt="BusTime" />
       </div>
