--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@
                         <div class="img-wrapper">
         <img class="centered-full" src="media/cinestill.png" alt="BigBen02" />
       </div>
+
+            <div class="insta-link">
+  <a href="https://www.instagram.com/ashen1ne" target="_blank">by @ashen1ne</a>
+</div>
     </section>
   </body>
 </html>
